// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package java.com.google.android.as.oss.common.security.api;


option java_package = "com.google.android.as.oss.common.security.api";
option java_outer_classname = "PackageSecurityInfoProto";
option java_multiple_files = true;

// The security policy for a package.
message PackageSecurityInfo {
  // The package name of the app.
  string package_name = 1;
  // The list of allowed release keys that the app can be signed with.
  repeated string allowed_release_keys = 2
     ;
  // The list of allowed test keys that the app can be signed with.
  // Only used for internal development.
  repeated string allowed_test_keys = 3
     ;
}

// A list of PackageSecurityInfo.
message PackageSecurityInfoList {
  repeated PackageSecurityInfo package_security_infos = 1;
}
