// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2024";

package com.google.android.as.oss.proto;

import option "third_party/java/protobuf/java_features.proto";

option java_outer_classname = "PcsStatsquery";
option java_package = "com.google.android.as.oss.proto";

message PcsStatsQuery {
  option features.(pb.java).nest_in_file_class = YES;

  // SQL query for querying statsd platform logs.
  string sql_query = 1 [features.field_presence = IMPLICIT];
}
